--- a/views/mydata.pug
+++ b/views/mydata.pug
@@ -1,5 +1,5 @@
 extends  layout 
 
 block content 
-    h1="world of manoj is intresting"
-    p welcome to #{title}
+    h1= title
+    p I am good at sports
